# storage/api-docs/api-docs.json
@@ -574,12 +574,7 @@
                 "type": "object"
             },
             "UserUpdateRequest": {
-                "required": [
-                    "name",
-                    "email",
-                    "password",
-                    "password_confirmation"
-                ],
+                "required": [],
                 "properties": {
                     "name": {
                         "description": "user fullname",
